# Scarecrow

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: pages.yml  release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/blocks/: ImageBlock.tsx  NoteBlock.tsx  PDFBlock.tsx  VideoBlock.tsx
src/components/canvas/: BlockShell.tsx  Canvas.tsx  Grid.tsx  SelectionBox.tsx
src/components/common/: ErrorBoundary.tsx  Icons.tsx
src/components/sidebar/: PageTree.tsx  WorkspacePanel.tsx
src/components/toolbar/: ContextMenu.tsx  Toolbar.tsx
src/hooks/: useCanvas.ts  useDrag.ts  useResize.ts  useShortcuts.ts
src/lib/: assets.ts  browserStorage.ts  db.ts  platform.ts  types.ts  utils.ts
src/store/: index.ts
src/styles/: global.css
