[package]
name = "scarecrow"
version = "0.1.0"
description = "Scarecrow infinite canvas workspace"
authors = ["Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.3", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-shell = "2.3.5"
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
urlencoding = "2.1.3"
uuid = { version = "1.12.0", features = ["v4", "serde"] }

[[bin]]
name = "scarecrow"
path = "src/main.rs"
